feat: enhance NavigationMobile component; add LinkItem array for navigation links and improve layout

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -324,7 +324,7 @@
     fill: var(--fill-logo-svg);
   }
   .webfilm-class {
-    display: none;
+    display: none !important;
   }
   .embla {
     max-width: screen;
