--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -242,84 +242,6 @@
   li::marker {
     content: "";
   }
-  .rt-Spinner {
-    position: relative;
-    opacity: var(--spinner-opacity);
-  }
-
-  .rt-SpinnerLeaf {
-    position: absolute;
-    top: 0;
-    left: calc(50% - 12.5% / 2);
-    width: 12.5%;
-    height: 100%;
-    animation: rt-spinner-leaf-fade var(--spinner-animation-duration) linear
-      infinite;
-  }
-  .rt-SpinnerLeaf:before {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 30%;
-    border-radius: var(--radius-1);
-    background-color: currentColor;
-  }
-
-  .rt-SpinnerLeaf:where(:nth-child(1)) {
-    transform: rotate(0deg);
-    animation-delay: calc(-8 / 8 * var(--spinner-animation-duration));
-  }
-  .rt-SpinnerLeaf:where(:nth-child(2)) {
-    transform: rotate(45deg);
-    animation-delay: calc(-7 / 8 * var(--spinner-animation-duration));
-  }
-  .rt-SpinnerLeaf:where(:nth-child(3)) {
-    transform: rotate(90deg);
-    animation-delay: calc(-6 / 8 * var(--spinner-animation-duration));
-  }
-  .rt-SpinnerLeaf:where(:nth-child(4)) {
-    transform: rotate(135deg);
-    animation-delay: calc(-5 / 8 * var(--spinner-animation-duration));
-  }
-  .rt-SpinnerLeaf:where(:nth-child(5)) {
-    transform: rotate(180deg);
-    animation-delay: calc(-4 / 8 * var(--spinner-animation-duration));
-  }
-  .rt-SpinnerLeaf:where(:nth-child(6)) {
-    transform: rotate(225deg);
-    animation-delay: calc(-3 / 8 * var(--spinner-animation-duration));
-  }
-  .rt-SpinnerLeaf:where(:nth-child(7)) {
-    transform: rotate(270deg);
-    animation-delay: calc(-2 / 8 * var(--spinner-animation-duration));
-  }
-  .rt-SpinnerLeaf:where(:nth-child(8)) {
-    transform: rotate(315deg);
-    animation-delay: calc(-1 / 8 * var(--spinner-animation-duration));
-  }
-
-  @keyframes rt-spinner-leaf-fade {
-    from {
-      opacity: 1;
-    }
-    to {
-      opacity: 0.25;
-    }
-  }
-
-  .rt-Spinner:where(.rt-r-size-1) {
-    width: var(--space-3);
-    height: var(--space-3);
-  }
-
-  .rt-Spinner:where(.rt-r-size-2) {
-    width: var(--space-4);
-    height: var(--space-4);
-  }
-  .rt-Spinner:where(.rt-r-size-3) {
-    width: calc(1.25 * var(--space-4));
-    height: calc(1.25 * var(--space-4));
-  }
   .tabs_indicator__lFbpm {
     --ds-gray-alpha-400: hsla(0, 0%, 100%, 0.14);
     --ds-background-100: hsl(0, 0%, 5%);
@@ -366,6 +288,15 @@
     font-weight: normal;
     font-size: 1rem;
     color: #828182;
+  }
+  #nd-docs-layout {
+    background-color: var(--sidebar-docs);
+  }
+  #nd-sidebar {
+    background-color: var(--sidebar-docs);
+  }
+  .bg-fd-card {
+    background-color: var(--sidebar-docs);
   }
 
   /* .slide-in {
@@ -996,6 +927,7 @@
   ---break---
 */
 :root {
+  --sidebar-docs:#ffffff;
   --theme-toggle-sun-icon-display:block;
   --theme-toggle-moon-icon-display:none;
   --radius: 0.625rem;
@@ -1035,7 +967,7 @@
   ---break---
 */
 .dark {
-  
+  --sidebar-docs:#000000;
   --theme-toggle-sun-icon-display:none;
   --theme-toggle-moon-icon-display:block;
   --background: oklch(0.141 0.005 285.823);
